tests/programs/valid/import_module_in_package/main.py
#!/usr/bin/env python

import messages.hello

print(messages.hello.value)
