tests/programs/invalid/invalid_syntax.py
#!/usr/bin/env python

x =
